--- a/index.html
+++ b/index.html
@@ -56,20 +56,8 @@
             <img src="banner.png" class="banner">
         </div>
         <div id="work" class="section">
-            <div>
+            <div id="gallery">
                 <h1>work.</h1>
-                <div class="card">
-                </div>
-                <div class="card">
-                </div>
-                <div class="card">
-                </div>
-                <div class="card">
-                </div>
-                <div class="card">
-                </div>
-                <div class="card">
-                </div>
             </div>
         </div>
     </div>
