--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             <div id="title">
                 <h1>ALEJANDRO C&Oacute;RDOBA BORJA</h1>
                 <a href="#2P">about me</a><br>
-                <a href="#3P">my work</a>
+                <a href="#3P">my work</a><br>
+                <a id="contactLink" href="#">contact</a>
             </div>
         </div>
         <div class="section about">
@@ -53,12 +54,18 @@
             <h2>+ design</h2>
             <h2>+ experience</h2>
             <div class="pargraph">I'm a Design and Systems Engineering student currently living in Bogot&aacute; Colombia. With two years of experience creating value and impact through the design of meaningful brands, digital products, and service experiences.</div>
-            <img src="banner.png" class="banner">
+            <img src="/src/banner.png" class="banner">
         </div>
         <div id="work" class="section">
             <div id="gallery">
                 <h1>work.</h1>
             </div>
+        </div>
+        <div class="section fp-auto-height footer">
+           <span><h1>That's all folks!</h1><br>
+           <h2>If you liked my work be sure to follow me on:</h2>
+           <a href="https://www.instagram.com/icoltus/"><img src="/src/instagramIcon.png"></a><a href="https://twitter.com/alejoCordoba05"><img src="/src/twitterIcon.png"></a>
+            </span>
         </div>
     </div>
 
