--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500,700" rel="stylesheet">
 
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script type="text/javascript" src="/dist/scrolloverflow.min.js"></script>
     <script type="text/javascript" src="/dist/jquery.fullpage.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/dist/jquery.fullpage.min.css" />
