--- a/index.html
+++ b/index.html
@@ -7,17 +7,24 @@
     <meta name="author" content="Alejandro Cordoba Borja" />
     <meta name="description" content="Alejandro's Cordoba Porfatolio" />
     <meta name="keywords" content="portafolio,design,software,colombia" />
-
+<!--Lady Pinzon:  Muy bien por usar las Keywords para que el motor de busqueda te encuentre mas rapido-->
 
     <link rel="stylesheet" type="text/css" href="index.css">
+<!--Lady Pinzon:  Es una buena practica que el archivo de css en donde aplicamos nuestros estilos personales, 
+este de ultimas, para que persistan sobre otros estilos de terceros. -->	
     <script src="index.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500,700" rel="stylesheet">
 
 
+<!--Lady Pinzon:  Es una buena practica que los scripts siempre vayan abajo, al final de body, porque es ideal 
+que primero se carge el html (la estructura de la pagina) y luego los Scripts. Si es al contrario, puede que se 
+tarde demasiado tiempo en abrir la pagina y para el usuario puede ser molesto, en vez de que vaya viendo como van 
+cargando todos los componentes de la pagina, que idealmente tampoco deberia tardar mucho. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script type="text/javascript" src="/dist/scrolloverflow.min.js"></script>
     <script type="text/javascript" src="/dist/jquery.fullpage.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/dist/jquery.fullpage.min.css" />
+
 
 
 </head>
@@ -34,6 +41,7 @@
             </h2>
             <input type="email" name="email" placeholder="Typer your e-mail"><button>ENVIAR</button>
         </span>
+	    <!--Lady Pinzon: Deberias poner una x o algo parecido para cerrar esta opcion de tu pagina y poder volver a home. -->	
     </div>
     <div id="fullpage">
 
