--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Alejandro Cordoba Borja" />
     <meta name="description" content="Alejandro's Cordoba Porfatolio" />
     <meta name="keywords" content="portafolio,design,software,colombia" />
-
+<!-- jgmurillo10: comentario -->
 
     <link rel="stylesheet" type="text/css" href="index.css">
     <script src="index.js"></script>
